; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw_ring.c___rds_iw_ring_used.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw_ring.c___rds_iw_ring_used.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_iw_work_ring = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.rds_iw_work_ring*)* @__rds_iw_ring_used to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__rds_iw_ring_used(%struct.rds_iw_work_ring* %0) #0 {
  %2 = alloca %struct.rds_iw_work_ring*, align 8
  %3 = alloca i64, align 8
  store %struct.rds_iw_work_ring* %0, %struct.rds_iw_work_ring** %2, align 8
  %4 = load %struct.rds_iw_work_ring*, %struct.rds_iw_work_ring** %2, align 8
  %5 = getelementptr inbounds %struct.rds_iw_work_ring, %struct.rds_iw_work_ring* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.rds_iw_work_ring*, %struct.rds_iw_work_ring** %2, align 8
  %8 = getelementptr inbounds %struct.rds_iw_work_ring, %struct.rds_iw_work_ring* %7, i32 0, i32 2
  %9 = call i64 @atomic_read(i32* %8)
  %10 = sub nsw i64 %6, %9
  store i64 %10, i64* %3, align 8
  %11 = load i64, i64* %3, align 8
  %12 = load %struct.rds_iw_work_ring*, %struct.rds_iw_work_ring** %2, align 8
  %13 = getelementptr inbounds %struct.rds_iw_work_ring, %struct.rds_iw_work_ring* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp sgt i64 %11, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @BUG_ON(i32 %16)
  %18 = load i64, i64* %3, align 8
  ret i64 %18
}

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
